Move intro to Mix task + gitignore exercises/tests
The next step is to create a mix task for generating the exercises and
tests, which will be brought in from a separate "exercise bank".

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,8 @@ spirit-*.tar
 
 # Temporary files, for example, from tests.
 /tmp/
+
+# Generated modules and tests
+# Feel free to remove these in your own fork
+test/spirit/
+lib/spirit/
